<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="PositionMaterials" Id="{fb8410b3-f0f6-44b4-8966-c80ac090a238}">
    <Declaration><![CDATA[TYPE PositionMaterials :
STRUCT
	position : REAL := GVL.nullPos; //default value is set to predefined constant if bundle needs less than 32 position material pairs
	
	top : STRING;
	left : STRING;
	right : STRING;
	bottom : STRING;
	
	topLeft : STRING;
	topLeftFold : USINT;
	
	topRight : STRING;
	topRightFold : USINT;
	
	bottomLeft : STRING;
	bottomLeftFold : USINT;
	
	bottomRight : STRING;
	bottomRightFold : USINT;

	wrapPoints : USINT;
	wrapRotations : USINT;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>